# Kata

./: .gitignore  README.md  egyptionFractions.c  goingLimits.c  narcissistic.py  pileofcubes.js  primeGap.c  stepPrimes.c  substringSort.c  sumOfDivisorsSquared.c
C/: c_list.c  codedimage.c  dec2FactorialBase.c  endian.c  gameChessboardSum.c  goingLimits.c  multipleEqualsSumofRest.c  reducingMath.c  stepPrimes.c  substringSort.c  sumOfDivisorsSquared.c
C++/: DES_encryption.cpp  README.md  complex.cpp  complexring.cpp  cpp_list.cpp  framed_messages.cpp  initialization.cpp  initializer_list.cpp  keylogger.cpp  keylogger2.cpp  nlohmann_config.md  rsa.cpp  structs.cpp  tcp_client.cpp  unordered.cpp
C++/entity/: config.json  entity.cpp
C++/sim/: CMakeLists.txt  PhysicsSphere.h  PhysicsWorld.h  README.md  main.cpp
C++/sim/include/: PhysicsSphere.h  PhysicsWorld.h  SphereRenderer.h
C++/sim/include/glad/: glad.h
C++/sim/src/: glad.c  main.cpp
JavaScript/: .alphabetPosition.js.swp  alphabetPosition.js  complementaryDNA.js  exesAndOhs.js  findNextSquare.js  nexus.js  validatePIN.js
Python/: .gitignore  README.md  abc.py  ac3.py  ac3_wiki.py  caesar_cipher.py  chutes_and_ladders.py  des_intuition.py  etc.py  hexagon.py  map_triples.py  map_triples2.py  map_trips.py  nonogram.py  rotate_string.py  rsa.py  sudoku.py  temp.py  triplets_nextbigger.py
Rust/: default.rs  deref.rs  drop.rs  fib.rs  ideas.md  iters.rs  linkedlist.rs  quize.rs  scores.rs  string_types.rs  towers.rs  traits.rs  turbofish.rs
Rust/wavhttp/: Cargo.toml  README.md
Rust/wavhttp/src/: main.rs
(+79 files in other folders)
